--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -31,5 +31,12 @@
         <ul id="messagesList"></ul>
     </div>
 </div>
-<script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat.js"></script>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script>
+        src = "~/js/signalr/dist/browser/signalr.js" >
+            <src="~/js/chat.js" ></script>
+}
