--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -32,11 +32,5 @@
     </div>
 </div>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-    <script>
-        src = "~/js/signalr/dist/browser/signalr.js" >
-            <src="~/js/chat.js" ></script>
-}
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/chat.js"></script>
